[package]
name = "imgui-sdl3-renderer"
description = "Imgui rendering backend for the sdl3 renderer"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/masonjmj/imgui-rs-sdl3-renderer"
homepage = "https://github.com/masonjmj/imgui-rs-sdl3-renderer"
categories = ["gui", "rendering"]

[dependencies]
imgui = "0.12.0"
sdl3 = "0.14.27"
sdl3-sys = "0.5.0"
